@startuml
package rest.tech{
/'package configure.hibernate.session{
class HibernateUtil {

	- sessionFactory:SessionFactory {static}
   +configureSessionFactory:SessionFactory {static}
    +getSessionFactory() :SessionFactory {static}
 +this()
	+main(arg[]:String ){ static }void

}
class SessionFactoryProvider <<final >>{
-  sessionFactory :SessionFactory <<final >>{static}

 +getSessionFactory() :{static}SessionFactory
 -this()
}

}'/
package rest.tech.model{
class Administrateur {
	- id:Integer
	-  nom:String
	-  prenom:String
	- email:String
	- adress:String
	- password:String
	+ this()
	+@Getters()
	+@Setters()
	+ seconnecter:
	+equals(o:Object ):boolean
	+toString():String

- articles:Set<Article>
# istance:Adminidtrateur {static}
-this()
+getArticles():Set<Article>
+getInstance():Adminidtrateur {static}

}

class Article {
#  instance:Article {static}
- id:Integer
-  libelle:String
-  String marque;
-  prix: Integer
- photo:String
- marque :String
-  categorie:Categorie
-  boutique :Boutique
- this()
+getInstance():Article
+@Getters()
 +@Setters()
 +equals(o:Object ):boolean
 	+toString():String
 	+ hashCode():int
}
class Boutique {
	# instance: Boutique  {static}
	-  d:Integer
	- description :String
	-  contact:String
	- articles:Set<Article>
	-this()
	@Getters()
	@Setters()
	getInstance:Boutique {static}
	+equals(o:Object ):boolean
    +toString():String
	+ hashCode():int
}
enum Categorie {
PC_Portable , PC_de_Bureau , Accessoires_ordinateurs,Smart_phone ,Tel_Fixe ,
Accessoires_teléphone ,Disque_dur ,Clé_USB ,Accessoires_stockage
}
}
package rest.tech.dao{
package rest.tech.dao.api{
interface IAdministrateurDao {
	 +addAdmin( key:Integer,admin:Administrateur  ):void
     +updateAddmin( admin:Administrateur):Administrateur
     +deleteAdmin(id:Integer ):void
     +getAdmin(Integer id):Administrateur
}
interface IArticleDao{

    + addArticle( key:Integer,article:Article  ):void
     +updateArticle( article:Article):Article
     +deleteArticle(id:Integer ):void
     +getArticle( id:Integer):Article
     +getAllArticles():List<Article>
}
interface IBoutiqueDao{
     +addBoutique( key:Integer,admin:Boutique  ):void
     +updateBoutique( boutique:Boutique):Article
     +deleteBoutique(id:Integer ):void
     +getBoutique( id:Integer):Boutique
     +getAllBoutiques():List<Boutique>
}

}
package rest.tech.dao.impl{
class AdministrateurDao implements IAdministrateurDao{
# instance :AdministrateurDao {static }
admins:Map<Integer,Administrateur>
 +getInstance() :AdministrateurDao {static }
-this()
    getAdmins():Map<Integer,Administrateur>
     addAdmin( key:Integer,admin:Administrateur  ):void
     updateAddmin( admin:Administrateur):Administrateur
     deleteAdmin(id:Integer ):void
     getAdmin(Integer id):Administrateur

}
class ArticleDao implements IArticleDao{
# instance:ArticleDao {static}
+ articles:Map<Integer,Article>
+getInstance():ArticleDao {static}
getArticles():Map<Integer,Article>
-this()
     addArticle( key:Integer,admin:Article  ):void
     updateArticle( admin:Article):Article
     deleteArticle(id:Integer ):void
     getArticle( id:Integer):Article
     getAllArticles():List<Article>
}
class BoutiqueDao implements IBoutiqueDao{
#instance :BoutiqueDao {static}
+boutiques Map<Integer,Boutique>
getBoutiques():Map<Integer,Boutique>
-this()
+ getInstance():BoutiqueDao {static}
    + addBoutique( key:Integer,admin:Boutique  ):void
    + updateBoutique( boutique:Boutique):Boutique
    + deleteBoutique(id:Integer ):void
    + getBoutique( id:Integer):Boutique
    + getAllBoutique():List<Boutique>
}
}
}
package rest.tech.resource{

package rest.tech.resource.api{

interface IAdministrateurResource {

	+getAdministrateur(id:Integer):Administrateur
	+getAdministrateurHtm(id:Integer):Administrateur
	+delete(id:Integer ):void
	+Response putAndGetResponse( admin:Administrateur)
	+Response putAdmin( admin:JAXBElement<Administrateur>)
	+ add( admin:Administrateur):void
	connexion(String login,String pass): Administrateur

}

interface IArticleResource {

  +getArticle(id:Integer ):Article
	+getArticleHtm(id:Integer):Article
	+delete(id:Integer ):void
	+Response putAndGetResponse( article:Article)
	+Response putAdmin( article:JAXBElement<Article>)
	+void add( article:Article)
	+getArticles():List<Article>
}
interface IBoutiqueResource{
    +getBoutique( id:Integer):Boutique
	+getBoutiqueHtm(id:Boutique):Boutique
	+delete(id:Integer ):void
	+Response putAndGetResponse( boutique:Boutique)
	+Response putBoutique( boutique:JAXBElement<Boutique>)
	+void add( boutique:Boutique)
	+getBoutiques():List<Boutique>
}
rest.tech.resource o..>javax.ws.rs
rest.tech.resource o..>javax.xml.bind
rest.tech.model o..> org.hibernate
}
package rest.tech.resource.impl{
class AdministrateurResource implements IAdministrateurResource{
#adminDao:AdministrateurDao
#instance:AdministrateurResource {static}
-uriInfo:UriInfo
 -request:Request
 +setUrlInfo(urlInfo:UrlInfo)
 +setRequest(request:Request)
-this()
connexion(String login,String pass): Administrateur
+getInstance():AdministrateurResource {static}
getAdministrateur(id:Integer):Administrateur
	+getAdministrateurHtm(id:Integer):Administrateur
	+delete(id:Integer ):void
	+Response putAndGetResponse( admin:Administrateur)
	+Response putAdmin( admin:JAXBElement<Administrateur>)
	+void add( admin:Administrateur)
}
class ArticleResource implements IArticleResource{
# articleDao:ArticleDao
#instance:ArticleResource {static}
-uriInfo:UriInfo
 -request:Request
 +setUrlInfo(urlInfo:UrlInfo)
 +setRequest(request:Request)
-this()
+getArticle(id:Integer):Article
	+getArticleHtm(id:Integer):Article
	+delete(id:Integer ):void
	+Response putAndGetResponse( article:Article)
	+Response putAdmin( admin:JAXBElement<Article>)
	+void add( article:Article)
	+getArticles():List<Article>
}
class BoutiqueResource implements IBoutiqueResource{
#boutiqueDao:BoutiqueDao
#instance:BoutiqueResource {static}
 -uriInfo:UriInfo
 -request:Request
 +setUrlInfo(urlInfo:UrlInfo)
 +setRequest(request:Request)
+getInstance():BoutiqueResource {static}
    +getBoutique(id:Integer):Boutique
	+getBoutiqueHtm(id:Integer):Boutique
	+delete(id:Integer ):void
	+Response putAndGetResponse( boutique:Boutique)
	+Response putBoutique( boutique:JAXBElement<Boutique>)
	+void add( boutique:Boutique)
	+getBoutiques():List<Boutique>
}
BoutiqueResource o..>BoutiqueDao
ArticleResource o..>ArticleDao
AdministrateurResource o..>AdministrateurDao

Categorie o..>Article
Boutique o--|>Article
Administrateur o--|>Article

}
}
}

@enduml
